 Week of June 11, 2007
       - Get nice support for ubuntu edgy eft.
 Week of June 25, 2007
       - Begin adding the 'integrate' command.
 Week of July 2, 2007
       - 2-d integrations in Xamine had displayed standard deviations not
         fwhm's as advertised.
       - Add docs for integrate command.
Week of July 9, 2007
       - Corrected CPacket.cpp for jumbos in scriptable.
Week of August 13, 2007
       - BZ 318 - Old GUI SpectrumGenerator.tcl was not listing  applied
         gates correctly when the filter mask was not *
Week of Sept 10,2007
       - BZ 318 revisited... need to use hash tables for the applied gates
         rather than lists to be utterly reliable.
       - Fix error in gamma 2d deluxe where if only one y parameter was specified
         one of the constructors would segfault because it was mistakenly getting units
         from y[1] not y[0].
       - Fix error in swrite NSCLAsciiSpectrumFormatter...get axis limits directly from the
         spectrum description rather than dorking around to get them from
         the converter.
Pre3 released

October 11, 2007 Pre 4 (or possibly 3.2-001) opened.

October 12, 2007 - Make multicolored monster understand Gamman deluxe spectra.
October 15, 2007 - Redid a bunch of stuff with the test data sources to 
            allow attach, re-attach , re-re attach etc.  Don't think there
            are any memory leaks.
October 23, 2007 - Add detach menu entry.. really stops processing and does an
                   attach -file /dev/null 
                 - added version specific daq locations to search path for
                   spectcldaq (gui).

November  6, 2007 - Convert to svn repository
November 26, 2007 - BZ 327 - Fix multicolored monster problems with changing spectra
                    in resopnse to tree parameter range changes.
December 4,2007   - Correct the Usage member of the calibration fit command so that
                    it reflects the change in the name of the command.
